test/libsolidity/syntaxTests/nameAndTypeResolution/503_builtin_sha256_reject_value.sol
contract C {
    function f() public {
        sha256.value();
    }
}
// ----
// TypeError: (47-59): Member "value" is only available for payable functions.
